# optomcalcOLD

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pyproject.toml  Dockerfile  LICENSE  Pipfile  README.MD  docker-compose.yaml  entrypoint.sh  makefile  manage.py  pyproject.toml  pytest.ini  run.sh
.github/workflows/: main.yml
ansible/: deploy.yml
ansible/templates/: optomcalc.shivan.xyz
app/: Dockerfile  Pipfile  entrypoint.sh  pytest.ini
app/calculator/: urls.py  views.py
app/calculator/calc_modules/: back_vertex_power.py  mean_ocular_perfusion_pressure.py  minimum_blank_size.py
app/calculator/tests/: test_calc_modules.py  test_views.py
app/config/: asgi.py  settings.py  wsgi.py
calculator/: models.py  urls.py  views.py
calculator/static/calculator/css/: style.css
calculator/templates/calculator/: back_vertex_power.html  base.html  cylinder_transpose.html  index.html  minimum_blank_size.html  minimum_blank_size_copy.html  minimum_lens_thickness.html  sidebar.html
calculator/tests/: test_views.py
nginx/: Dockerfile  default.conf
optomcalc/: Pipfile  entrypoint.sh  settings.py  urls.py  wsgi.py
optomcalc/calculator/: urls.py  views.py
optomcalc/calculator/calc_modules/: back_vertex_power.py  cylinder_transpose.py  mean_ocular_perfusion_pressure.py  minimum_blank_size.py  special_return.py
optomcalc/calculator/tests/: test_calc_modules.py  test_views.py
optomcalc/lenschecker/: README.MD
optomcalc/optomcalc/: asgi.py  settings.py  wsgi.py
optomcalc/settings/: base.py  production.py
static/calculator/js/: script.js
(+7 files in other folders)
