[tool.poetry]
name = "optomcalc"
version = "0.1.0"
description = ""
authors = ["ShivanS93 <shivan.sivakumaran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
