[tool.poetry]
name = "optomcalc"
version = "0.1.0"
description = ""
authors = ["ShivanS93 <shivan.sivakumaran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
python-dotenv = "^0.18.0"
pytest-django = "^4.4.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
